changed spec and got regeneration to work
